--- a/waybar/style.css
+++ b/waybar/style.css
@@ -17,7 +17,8 @@
 #network,
 #cpu,
 #memory,
-#workspaces {
+#workspaces,
+#language {
   border-radius: 4px;
   margin: 1px 3px;
   padding: 6px 12px;
