--- a/waybar/style.css
+++ b/waybar/style.css
@@ -3,13 +3,14 @@
   font-size: 12px;
   min-height: 0px;
   border-radius: 0px;
-  color: #fecdb2;
+  color: #c1c99d;
+	background-color: rgba(0.0, 0.0, 0.0, 0.9);
+  background: #1a2f2a;
 }
 
 #waybar {
   margin: 12px 12px 12px 12px;
   border-radius: 4px;
-  background: #2b292d;
 }
 
 #pulseaudio,
