--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,6 +1,6 @@
 * {
-    font-family: "Monofur Nerd Font Mono", "Symbols Nerd Font";
-    font-size: 12px;
+    font-family: "JetBrains Mono", "Symbols Nerd Font";
+    font-size: 11px;
     font-weight: bold;
     border: none;
     border-radius: 0;
